# solid-goggles

./: .env  Cargo.toml  README.md
migrations/2023-09-05-084128_create_todos/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs  todos.rs
src/api/: todo.rs
src/model/: todo.rs
src/repository/: pg.rs
