[package]
name = "todoer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum_macros = { version = "0.24" }
strum = { version = "0.24", features = ["derive"] }
actix-web = "4"
sqlx = { version = "0.7.1", features = [
    "runtime-async-std-native-tls",
    "uuid",
    "chrono",
    "postgres",
] }
actix-cors = "0.6.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
chrono = { version = "0.4.29", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4"
dotenvy = "0.15.7"
derive_more = "0.99"
utoipa = { version = "3.5.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }
utoipa-redoc = { version = "0.1.0", features = ["actix-web"] }
utoipa-rapidoc = { version = "0.1.0", features = ["actix-web"] }
